[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vyperdatum"
description = "Transform data using PROJ/VDatum grids"
readme = "README.md"
requires-python = ">=3.8.2"
license = {file = "LICENSE"}
authors = [
    {name = "Eric Younkin", email = "eric.g.younkin@noaa.gov"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.20.0",
    "pyproj>=3.0.1",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/noaa-ocs-hydrography/vyperdatum"

[tool.setuptools.packages.find]
where = ["."]
include = ["vyperdatum*"]
exclude = ["tests", "*.tests", "*.tests.*", "tests.*", "scripts*", "docs*", "data*", "web_api*"]

[tool.setuptools.dynamic]
version = {attr = "vyperdatum.__version__.__version__"}
